<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:picker="http://schemas.android.com/apk/res/es.glasspixel.wlanaudit">
	<PreferenceCategory android:title="@string/scan_pref_group_name"
		android:key="scan_prefs">
		<CheckBoxPreference android:summaryOn="@string/wifi_autostart_active_summary" android:key="wifi_autostart" android:summaryOff="@string/wifi_autostart_inactive_summary" android:disableDependentsState="true" android:title="@string/wifi_autostart" android:defaultValue="true"></CheckBoxPreference><com.quietlycoding.android.picker.NumberPickerPreference
			android:title="@string/autoscan_preference_title" android:positiveButtonText="@string/ok_button" android:dialogTitle="@string/autoscan_preference_title" android:max="300" android:summary="@string/autoscan_preference_summary" android:defaultValue="5" android:dialogLayout="@layout/number_picker_pref" android:key="autoscan_interval" android:text="@string/time_unit" android:negativeButtonText="@string/dialog_cancel"/>
		
	</PreferenceCategory>
	<PreferenceCategory android:key="about_app_prefs" android:title="@string/app_info_pref_group_name">
		<Preference android:title="@string/about_app" android:summary="@string/about_app_summary"><intent android:action="com.glasspixel.wlanaudit.ABOUT"></intent></Preference>
	</PreferenceCategory>
</PreferenceScreen>