<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/es.glasspixel.wlanaudit"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <com.markupartist.android.widget.ActionBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/actionBar" app:title="@string/app_name" style="@style/ActionBar"></com.markupartist.android.widget.ActionBar>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/viewHeaderLayout">
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/networkIcon" android:src="@drawable/wifi_signal" android:layout_marginLeft="10dip" android:layout_marginTop="10dip" android:layout_marginBottom="10dip"></ImageView>
        <TextView android:paddingLeft="5dip" android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/networkName" android:textAppearance="?android:attr/textAppearanceLarge" android:paddingTop="3dip" android:layout_marginTop="10dip" android:layout_marginBottom="10dip"></TextView>
    </LinearLayout>
    <View android:id="@+id/divider"
    android:background="@drawable/layout_divider"
    android:layout_width="fill_parent"
    android:layout_height="1dp"/>
    <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="15dip" android:id="@+id/networkParamsLayout">
        
        <TableRow android:paddingLeft="20dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/bssidRow" android:paddingBottom="10dip">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_bssid_label" android:paddingRight="5dip" android:id="@+id/bssid_label"></TextView>
            <TextView android:text="TextView" android:id="@+id/bssid_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow android:paddingLeft="20dip" android:paddingBottom="10dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/encryptionRow">
            <TextView android:paddingRight="5dip" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_encryption_label" android:id="@+id/encryption_label"></TextView>
            <TextView android:text="TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/encryption_value"></TextView>
        </TableRow>
        <TableRow android:paddingLeft="20dip" android:paddingBottom="10dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/frequencyRow">
            <TextView android:paddingRight="5dip" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_frequency" android:id="@+id/frequency_label"></TextView>
            <TextView android:text="TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/frequency_value"></TextView>
        </TableRow>
        <TableRow android:paddingLeft="20dip" android:paddingBottom="10dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/intensityRow">
            <TextView android:paddingRight="5dip" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signal_level_label" android:id="@+id/intensity_label"></TextView>
            <TextView android:text="TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/intensity_value"></TextView>
        </TableRow>
        <TableRow android:paddingLeft="18dip" android:paddingBottom="10dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/defaultPasswordRow">
            <TextView android:paddingRight="5dip" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_password_label" android:id="@+id/password_label"></TextView>
            <TextView android:text="TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dip" android:id="@+id/password_value"></TextView>
        </TableRow>
    </TableLayout>
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/layout_divider" android:id="@+id/divider" android:layout_marginTop="5dip"></View>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="right" android:paddingTop="10dip" android:layout_marginLeft="20dip" android:layout_marginRight="20dip" android:paddingBottom="10dip" android:id="@+id/buttonsLayout">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/connectButton" android:text="@string/connect_button" android:enabled="false"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/copyPasswordButton" android:text="@string/copy_pass_button"></Button>
    </LinearLayout>
    
</LinearLayout>
