<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/viewHeaderLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables" >

        <ImageView
            android:id="@+id/networkIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:src="@drawable/wifi_signal" />

        <TextView
            android:id="@+id/networkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:paddingLeft="5dip"
            android:paddingTop="3dip"
            android:text="TextView"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="HardcodedText" >
        </TextView>
    </LinearLayout>

    <!-- <View -->
    <!-- android:id="@+id/divider" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="1dp" -->
    <!-- android:background="@drawable/layout_divider" /> -->

    <TableLayout
        android:id="@+id/networkParamsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip" >

        <TableRow
            android:id="@+id/bssidRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip" >

            <TextView
                android:id="@+id/bssid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/network_bssid_label"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <TextView
                android:id="@+id/bssid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:ignore="HardcodedText" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/encryptionRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip" >

            <TextView
                android:id="@+id/encryption_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/network_encryption_label"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <TextView
                android:id="@+id/encryption_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:ignore="HardcodedText" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/frequencyRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip" >

            <TextView
                android:id="@+id/frequency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/network_frequency"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <TextView
                android:id="@+id/frequency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:ignore="HardcodedText" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/channelRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip" >

            <TextView
                android:id="@+id/channel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/network_channel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/channel_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:ignore="HardcodedText" />
        </TableRow>

        <TableRow
            android:id="@+id/intensityRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip" >

            <TextView
                android:id="@+id/intensity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/signal_level_label"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <TextView
                android:id="@+id/intensity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:ignore="HardcodedText" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/defaultPasswordRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="18dip" >

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/default_password_label"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <TextView
                android:id="@+id/password_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:text="TextView"
                tools:ignore="HardcodedText" >
            </TextView>
        </TableRow>
    </TableLayout>

    <!-- <View -->
    <!-- android:id="@+id/divider2" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="1dp" -->
    <!-- android:layout_marginTop="5dip" -->
    <!-- android:background="@drawable/layout_divider" > -->
    <!-- </View> -->

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="right"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <ImageButton
            android:id="@+id/starNetworkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/copyPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copy_pass_button" >
        </Button>
    </LinearLayout>

</LinearLayout>